[gd_scene load_steps=39 format=4 uid="uid://dom2bq6x7abkr"]

[ext_resource type="Script" uid="uid://ocibsxhcwp14" path="res://scripts/player/player.gd" id="1_3eola"]
[ext_resource type="Resource" uid="uid://b6w7oxn8rfgtk" path="res://input/tail_attack.tres" id="2_der45"]
[ext_resource type="Script" uid="uid://crel58vv8ykib" path="res://scripts/player/player_hitbox.gd" id="2_dyxlg"]
[ext_resource type="Material" uid="uid://dcd2s0eawu3kf" path="res://assets/materials/planted_player_farm_material.tres" id="2_yj68g"]
[ext_resource type="Resource" uid="uid://c6tovgnwacf3x" path="res://input/move.tres" id="3_0llfg"]
[ext_resource type="Resource" uid="uid://t84x06cxbh2f" path="res://input/interact.tres" id="4_0llfg"]
[ext_resource type="Resource" uid="uid://b0vpao0b4usp1" path="res://input/stomp.tres" id="5_cnsyf"]
[ext_resource type="Script" uid="uid://u380g531p8ia" path="res://scripts/player/camera_controls.gd" id="5_dmlwb"]
[ext_resource type="Resource" uid="uid://ej23s0epyv1y" path="res://input/camera_move.tres" id="6_jp832"]
[ext_resource type="Material" uid="uid://bu2hhup8lfd3y" path="res://assets/materials/default_player_farm_material.tres" id="7_ioxgp"]
[ext_resource type="Resource" uid="uid://bo0hoqgqx87cp" path="res://input/lock_on.tres" id="8_dmlwb"]
[ext_resource type="Script" uid="uid://dm7wjvj3tat0d" path="res://ui/ui.gd" id="8_ixiwu"]
[ext_resource type="PackedScene" uid="uid://cc37235kj4384" path="res://addons/maaacks_ui_sound_controller/base/scenes/Autoloads/ProjectUISoundController.tscn" id="9_1ps34"]
[ext_resource type="Material" uid="uid://7uthqp3njhqt" path="res://assets/materials/plant_material.tres" id="9_ioxgp"]
[ext_resource type="Resource" uid="uid://dev701h4y2c4p" path="res://input/change_lock.tres" id="9_jp832"]
[ext_resource type="PackedScene" uid="uid://cy6m31weto8k1" path="res://assets/3d/characters/player/Kaiju.glb" id="10_cnsyf"]
[ext_resource type="AudioStream" uid="uid://5kc55ftsdrvt" path="res://ui/assets/audio/rollover5.ogg" id="10_mtrw4"]
[ext_resource type="Script" uid="uid://dlrpea0mdv2sj" path="res://ui/overlay.gd" id="11_du256"]
[ext_resource type="PackedScene" uid="uid://c31bw3nk5ujvg" path="res://ui/settings/settings.tscn" id="12_hmqcg"]
[ext_resource type="PackedScene" uid="uid://mwbv2jh1ugjq" path="res://ui/controls/controls.tscn" id="13_fvg78"]
[ext_resource type="PackedScene" uid="uid://bojsla6nqcf03" path="res://ui/game/game_ui.tscn" id="14_64oqw"]
[ext_resource type="PackedScene" uid="uid://3s7lo7jd53un" path="res://ui/pause_menu/pause_menu.tscn" id="15_8vj76"]
[ext_resource type="PackedScene" uid="uid://dtrluvg5ox2vb" path="res://ui/notifications/message_board.tscn" id="17_qcw8q"]
[ext_resource type="PackedScene" uid="uid://crak05vlyp0ep" path="res://scenes/player/lose_screen.tscn" id="19_dmlwb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8ydkj"]
albedo_color = Color(0.564706, 0.337255, 0.152941, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ioxgp"]
size = Vector3(2, 2, 2.8031)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fwcrm"]

[sub_resource type="ArrayMesh" id="ArrayMesh_yin1h"]
_surfaces = [{
"aabb": AABB(-0.213977, -0.213977, -0.530345, 0.427953, 0.427953, 0.463326),
"format": 34359742465,
"index_count": 132,
"index_data": PackedByteArray("AAABAAIAAwAAAAIAAwACAAQABQAAAAMAAAAFAAEABgADAAQABQADAAYABwAEAAIABwACAAEABgAEAAcABQAIAAEABgAJAAUABQAJAAgABwAKAAYABgAKAAkAAQALAAcAAQAIAAsABwALAAoACQAMAAgACAANAAsACAAMAA0ACwAOAAoACwANAA4ACgAPAAkACQAPAAwACgAOAA8ADAAQAA0ADQARAA4ADQAQABEADgASAA8ADgARABIADwATAAwADAATABAADwASABMAEAAUABEAEgAVABMAEwAWABAAEAAWABQAEwAVABYAEQAUABcAEQAXABIAFwAUABYAEgAXABUAFwAWABUA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("sRxbvrEcW776QIm9pkWxvaZFsT2YGu69sRxbvrEcWz76QIm9sRxbPrEcW776QIm9sRxbPrEcWz76QIm9pkWxvaZFsb2YGu69pkWxPaZFsb2YGu69pkWxPaZFsT2YGu69xy9+vfPuZDt/lGC+xy9+vR5+F75/lGC+0Qu3PR5+F75/lGC+0Qu3PfPuZDt/lGC+RwfYvZYTtD1WC6a+8HurO5YTtD1WC6a+8HurO76turxWC6a+RwfYvb6turxWC6a+saLiPD6hlbvQ+tm+saLiPHeEl73Q+tm+awMrvXeEl73Q+tm+awMrvT6hlbvQ+tm+1ZDNvJtQQz2pxAe/3FU/vQbvjT2pxAe/1ZDNvAbvjT2pxAe/3FU/vZtQQz2pxAe/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_cnsyf"]
resource_name = "saplings_Cube_002"
_surfaces = [{
"aabb": AABB(-0.213977, -0.213977, -0.530345, 0.427953, 0.427953, 0.463326),
"attribute_data": PackedByteArray("AADAPgAAgD8AACA/AABAPwAAID8AAIA/AADAPgAAQD8AACA/AAAAPwAAwD4AAAA/AADAPgAAAD8AACA/AAAAPwAAwD4AAAA/AAAgPwAAgD4AACA/AAAAPwAAwD4AAIA+AADAPgAAgD4AACA/AAAAAAAAID8AAIA+AADAPgAAAAAAAAA+AAAAPwAAwD4AAIA+AADAPgAAAD8AAAA+AACAPgAAID8AAAA/AABgPwAAgD4AAGA/AAAAPwAAID8AAIA+AAAgPwAAAD8AAMA+AAAAPwAAwD4AAAA/AAAgPwAAAD8AAMA+AAAAPwAAAD4AAAA/AAAAPgAAAD8AAMA+AAAAPwAAYD8AAAA/AAAgPwAAAD8AACA/AAAAPwAAYD8AAAA/AADAPgAAQD8AACA/AABAPwAAID8AAEA/AADAPgAAQD8AAGA/AAAAPwAAID8AAAA/AAAgPwAAAD8AAGA/AAAAPwAAwD4AAAA/AAAAPgAAAD8AAAA+AAAAPwAAwD4AAAA/AABgPwAAAD8AACA/AAAAPwAAID8AAAA/AABgPwAAAD8AAMA+AABAPwAAID8AAEA/AAAgPwAAQD8AAMA+AABAPwAAwD4AAEA/AAAgPwAAQD8AACA/AABAPwAAwD4AAEA/AADAPgAAQD8AACA/AABAPwAAID8AAEA/AADAPgAAQD8AACA/AAAAPwAAwD4AAAA/AADAPgAAAD8AACA/AAAAPwAAwD4AAAA/AAAAPgAAAD8AAAA+AAAAPwAAwD4AAAA/AADAPgAAQD8AACA/AAAAPwAAID8AAEA/AADAPgAAAD8AACA/AAAAPwAAwD4AAAA/AADAPgAAAD8AACA/AAAAPwAAwD4AAAA/AAAAPgAAAD8AAAA+AAAAPwAAwD4AAAA/AABgPwAAAD8AACA/AAAAPwAAID8AAAA/AABgPwAAAD8="),
"format": 34359742487,
"index_count": 132,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUAGAAZABoAGAAbABkAHAAdAB4AHAAfAB0AIAAhACIAIAAjACEAJAAlACYAJAAnACUAKAApACoAKAArACkALAAtAC4ALAAvAC0AMAAxADIAMAAzADEANAA1ADYANAA3ADUAOAA5ADoAOAA7ADkAPAA9AD4APAA/AD0AQABBAEIAQABDAEEARABFAEYARABHAEUASABJAEoASABLAEkATABNAE4ATABPAE0AUABRAFIAUABTAFEAVABVAFYAVABXAFUA"),
"material": SubResource("StandardMaterial3D_fwcrm"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 88,
"vertex_data": PackedByteArray("sRxbvrEcW776QIm9pkWxvaZFsT2YGu69sRxbvrEcWz76QIm9pkWxvaZFsb2YGu69pkWxPaZFsT2YGu690Qu3PR5+F75/lGC+pkWxPaZFsb2YGu690Qu3PfPuZDt/lGC+pkWxPaZFsb2YGu69sRxbPrEcWz76QIm9pkWxPaZFsT2YGu69sRxbPrEcW776QIm9sRxbPrEcW776QIm9sRxbvrEcWz76QIm9sRxbPrEcWz76QIm9sRxbvrEcW776QIm9pkWxvaZFsb2YGu69sRxbPrEcW776QIm9pkWxPaZFsb2YGu69sRxbvrEcW776QIm9pkWxPaZFsT2YGu69sRxbvrEcWz76QIm9pkWxvaZFsT2YGu69sRxbPrEcWz76QIm90Qu3PfPuZDt/lGC+8HurO76turxWC6a+0Qu3PR5+F75/lGC+8HurO5YTtD1WC6a+pkWxPaZFsb2YGu69xy9+vR5+F75/lGC+pkWxvaZFsb2YGu690Qu3PR5+F75/lGC+pkWxvaZFsT2YGu690Qu3PfPuZDt/lGC+pkWxPaZFsT2YGu69xy9+vfPuZDt/lGC+pkWxvaZFsb2YGu69xy9+vfPuZDt/lGC+pkWxvaZFsT2YGu69xy9+vR5+F75/lGC+RwfYvZYTtD1WC6a+saLiPD6hlbvQ+tm+8HurO5YTtD1WC6a+awMrvT6hlbvQ+tm+0Qu3PR5+F75/lGC+RwfYvb6turxWC6a+xy9+vR5+F75/lGC+8HurO76turxWC6a+xy9+vfPuZDt/lGC+8HurO5YTtD1WC6a+0Qu3PfPuZDt/lGC+RwfYvZYTtD1WC6a+xy9+vR5+F75/lGC+RwfYvZYTtD1WC6a+xy9+vfPuZDt/lGC+RwfYvb6turxWC6a+awMrvXeEl73Q+tm+3FU/vQbvjT2pxAe/awMrvT6hlbvQ+tm+3FU/vZtQQz2pxAe/RwfYvb6turxWC6a+awMrvT6hlbvQ+tm+RwfYvZYTtD1WC6a+awMrvXeEl73Q+tm+8HurO5YTtD1WC6a+saLiPHeEl73Q+tm+8HurO76turxWC6a+saLiPD6hlbvQ+tm+8HurO76turxWC6a+awMrvXeEl73Q+tm+RwfYvb6turxWC6a+saLiPHeEl73Q+tm+3FU/vZtQQz2pxAe/1ZDNvAbvjT2pxAe/3FU/vQbvjT2pxAe/1ZDNvJtQQz2pxAe/saLiPD6hlbvQ+tm+1ZDNvJtQQz2pxAe/saLiPHeEl73Q+tm+1ZDNvAbvjT2pxAe/saLiPHeEl73Q+tm+3FU/vZtQQz2pxAe/awMrvXeEl73Q+tm+1ZDNvJtQQz2pxAe/awMrvT6hlbvQ+tm+1ZDNvAbvjT2pxAe/saLiPD6hlbvQ+tm+3FU/vQbvjT2pxAe/AABR3P9///8AAFHc/3///wAAUdz/f///AABR3P9///+X/P9/////P5f8/3////8/l/z/f////z+X/P9/////P///Udz/f/////9R3P9//////1Hc/3//////Udz/f////3//f/9/////f/9//3////9//3//f////3//f/9///9R3AAA////v1HcAAD///+/UdwAAP///79R3AAA////v1Hc//8AAP+/Udz//wAA/79R3P//AAD/v1Hc//8AAP+////xuP///z////G4////P///8bj///8////xuP///z//f8cv////P/9/xy////8//3/HL////z//f8cv////Px+5//////8/H7n//////z8fuf//////Px+5//////8/AACVmP///z8AAJWY////PwAAlZj///8/AACVmP///z8Mvf//////Pwy9//////8/DL3//////z8Mvf//////P5rFAAD///8/msUAAP///z+axQAA////P5rFAAD///8//3/xxv///z//f/HG////P/9/8cb///8//3/xxv///z9zJf9/////P3Ml/3////8/cyX/f////z9zJf9/////P8wF/3////8/zAX/f////z/MBf9/////P8wF/3////8/AABjsf///z8AAGOx////PwAAY7H///8/AABjsf///z/R6P9/////P9Ho/3////8/0ej/f////z/R6P9/////P/9/7yr///8//3/vKv///z//f+8q////P/9/7yr///8///////9//////////3//////////f/////////9//////+iq////P///6Kr///8////oqv///z///+iq////P9PEAAD///8/08QAAP///z/TxAAA////P9PEAAD///8//38Dy////z//fwPL////P/9/A8v///8//38Dy////z8=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_yin1h")

[sub_resource type="BoxShape3D" id="BoxShape3D_dmlwb"]
size = Vector3(25, 4, 19.854)

[sub_resource type="BoxShape3D" id="BoxShape3D_cnsyf"]
size = Vector3(1, 1.16748, 4.59293)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ioxgp"]
radius = 3.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dmlwb"]
albedo_color = Color(0.823529, 0, 0.701961, 1)

[sub_resource type="SphereMesh" id="SphereMesh_jp832"]
material = SubResource("StandardMaterial3D_dmlwb")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_dmlwb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jp832"]
vertex_color_use_as_albedo = true
albedo_color = Color(0.835294, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_iwx2n"]
material = SubResource("StandardMaterial3D_jp832")
radius = 0.25
height = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_uljta"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("farm1", "farm2", "farm3", "farm4", "sapling1", "sapling2", "sapling3", "sapling4", "farm_1_timer", "farm_2_timer", "farm_3_timer", "farm_4_timer", "game_UI", "death_screen", "death_screen_label", "interact_prompt", "interaction_raycast", "camera", "camera_spring_arm", "camera_pivot", "mesh_parent", "animation_player")]
collision_mask = 3
script = ExtResource("1_3eola")
farm1 = NodePath("MeshParent/Farm/Farm1")
farm2 = NodePath("MeshParent/Farm/Farm2")
farm3 = NodePath("MeshParent/Farm/Farm3")
farm4 = NodePath("MeshParent/Farm/Farm4")
sapling1 = NodePath("MeshParent/Farm/Farm1/sapling1")
sapling2 = NodePath("MeshParent/Farm/Farm2/sapling2")
sapling3 = NodePath("MeshParent/Farm/Farm3/sapling3")
sapling4 = NodePath("MeshParent/Farm/Farm4/sapling4")
farm_1_timer = NodePath("MeshParent/Farm/Farm1/FarmTimer1")
farm_2_timer = NodePath("MeshParent/Farm/Farm2/FarmTimer2")
farm_3_timer = NodePath("MeshParent/Farm/Farm3/FarmTimer3")
farm_4_timer = NodePath("MeshParent/Farm/Farm4/FarmTimer4")
default_material = SubResource("StandardMaterial3D_8ydkj")
planted_material = ExtResource("2_yj68g")
game_UI = NodePath("CameraPivot/UI/Game")
death_screen = NodePath("CameraPivot/Lose Screen")
death_screen_label = NodePath("CameraPivot/Lose Screen/ColorRect/VBoxContainer/Label")
interact_prompt = NodePath("CameraPivot/UI/Game/InputPrompt")
interaction_raycast = NodePath("MeshParent/InteractionRaycast")
tail_attack_action = ExtResource("2_der45")
bite_action = ExtResource("4_0llfg")
stomp_action = ExtResource("5_cnsyf")
move_action = ExtResource("3_0llfg")
interact = ExtResource("4_0llfg")
camera = NodePath("CameraPivot/CameraNest/Camera3D")
camera_spring_arm = NodePath("CameraPivot/SpringArm")
camera_pivot = NodePath("CameraPivot")
mesh_parent = NodePath("MeshParent")
animation_player = NodePath("MeshParent/Kaiju/AnimationPlayer")
speed = 20.0
turn_speed = 10.0

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.28595)
shape = SubResource("BoxShape3D_ioxgp")

[node name="MeshParent" type="Node3D" parent="."]
transform = Transform3D(1, 0, 4.46638e-06, 0, 1, 0, -4.46638e-06, 0, 1, 0, 0, 0)

[node name="MarkerBehindPlayer" type="Marker3D" parent="MeshParent"]
transform = Transform3D(1, 0, -4.46638e-06, 0, 1, 0, 4.46638e-06, 0, 1, -2.23319e-05, 3.5, 5)

[node name="InteractionRaycast" type="RayCast3D" parent="MeshParent"]
transform = Transform3D(1, 0, -4.46638e-06, 0, 1, 0, 4.46638e-06, 0, 1, 0, 0, 0)
target_position = Vector3(0, 0, -10)

[node name="Farm" type="Node3D" parent="MeshParent"]
transform = Transform3D(1, 0, -4.46638e-06, 0, 1, 0, 4.46638e-06, 0, 1, 0, 0, 0)

[node name="Farm1" type="CSGBox3D" parent="MeshParent/Farm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.376, 2.275, -0.89)
size = Vector3(0.5, 0.395, 0.5)
material = ExtResource("7_ioxgp")

[node name="sapling1" type="MeshInstance3D" parent="MeshParent/Farm/Farm1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0963292, 0)
material_override = ExtResource("9_ioxgp")
mesh = SubResource("ArrayMesh_cnsyf")
skeleton = NodePath("")

[node name="FarmTimer1" type="Timer" parent="MeshParent/Farm/Farm1"]
one_shot = true

[node name="Farm2" type="CSGBox3D" parent="MeshParent/Farm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.304, 2.275, -0.89)
size = Vector3(0.5, 0.395, 0.5)
material = ExtResource("7_ioxgp")

[node name="FarmTimer2" type="Timer" parent="MeshParent/Farm/Farm2"]
one_shot = true

[node name="sapling2" type="MeshInstance3D" parent="MeshParent/Farm/Farm2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0963292, 0)
material_override = ExtResource("9_ioxgp")
mesh = SubResource("ArrayMesh_cnsyf")
skeleton = NodePath("")

[node name="Farm3" type="CSGBox3D" parent="MeshParent/Farm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.376, 2.275, -0.125)
size = Vector3(0.5, 0.395, 0.5)
material = ExtResource("7_ioxgp")

[node name="FarmTimer3" type="Timer" parent="MeshParent/Farm/Farm3"]
one_shot = true

[node name="sapling3" type="MeshInstance3D" parent="MeshParent/Farm/Farm3"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0963292, 0)
material_override = ExtResource("9_ioxgp")
mesh = SubResource("ArrayMesh_cnsyf")
skeleton = NodePath("")

[node name="Farm4" type="CSGBox3D" parent="MeshParent/Farm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.325, 2.275, -0.13)
size = Vector3(0.5, 0.395, 0.5)
material = ExtResource("7_ioxgp")

[node name="FarmTimer4" type="Timer" parent="MeshParent/Farm/Farm4"]
one_shot = true

[node name="sapling4" type="MeshInstance3D" parent="MeshParent/Farm/Farm4"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0963292, 0)
material_override = ExtResource("9_ioxgp")
mesh = SubResource("ArrayMesh_cnsyf")
skeleton = NodePath("")

[node name="LockOnArea" type="Area3D" parent="MeshParent"]
transform = Transform3D(1, 0, -4.46638e-06, 0, 1, 0, 4.46638e-06, 0, 1, 0, 0, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshParent/LockOnArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -7.05414)
shape = SubResource("BoxShape3D_dmlwb")

[node name="Kaiju" parent="MeshParent" instance=ExtResource("10_cnsyf")]

[node name="Player Kaiju Armature" parent="MeshParent/Kaiju" index="0"]
transform = Transform3D(0.4, 0, 0, 0, -0.023435, 0.399313, 0, -0.399313, -0.023435, -0.0266176, 2.01457, -0.520304)

[node name="Skeleton3D" parent="MeshParent/Kaiju/Player Kaiju Armature" index="0"]
bones/0/position = Vector3(4.98725e-16, 0.10212, 0.0207558)
bones/0/rotation = Quaternion(0.00120583, 1.19209e-07, 1.43742e-10, 0.999999)
bones/1/rotation = Quaternion(0.195368, -2.22349e-14, 4.65793e-08, 0.98073)
bones/2/rotation = Quaternion(0.415148, 3.25354e-07, 2.47448e-07, 0.909754)
bones/3/rotation = Quaternion(-0.0584314, -1.08892e-12, -5.57246e-08, 0.998291)
bones/4/rotation = Quaternion(-0.457527, -3.34546e-15, -4.36332e-07, 0.889196)
bones/5/rotation = Quaternion(-0.307071, -2.20464e-14, -2.92846e-07, 0.951687)
bones/6/position = Vector3(-0.266384, 1.49088, 0.272609)
bones/6/rotation = Quaternion(-0.343315, 0.32911, 0.605827, 0.637805)
bones/6/scale = Vector3(1, 1, 1)
bones/7/position = Vector3(0.267038, 1.48092, 0.273869)
bones/7/rotation = Quaternion(0.649882, 0.672139, 0.230148, -0.270028)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(-0.747898, -0.0595884, 0.0590904, 0.658488)
bones/9/rotation = Quaternion(0.00345878, 0.0448799, 0.0191066, 0.998804)
bones/10/position = Vector3(5.1677e-16, 0.10212, 0.0207559)
bones/10/rotation = Quaternion(-7.90644e-07, 0.0166579, 0.999861, -1.31723e-08)
bones/12/rotation = Quaternion(-0.443371, 0.00949242, -0.0175154, 0.896117)
bones/13/rotation = Quaternion(-0.0881574, 0.00260757, 0.00811214, 0.99607)
bones/14/rotation = Quaternion(0.0176524, -0.000781053, 0.00604452, 0.999826)
bones/15/rotation = Quaternion(0.125606, -3.97358e-10, 1.97649e-07, 0.99208)
bones/16/rotation = Quaternion(0.213093, 0.000360923, 0.00265885, 0.977028)
bones/17/position = Vector3(5.70863e-10, 2.19425, 0.0258006)
bones/17/rotation = Quaternion(-0.0445638, 0.0366168, -0.756166, 0.651833)
bones/18/rotation = Quaternion(-0.643358, 0.0616561, 0.0866758, 0.75814)
bones/19/rotation = Quaternion(-0.0657366, 0.0378212, -0.191749, 0.978509)
bones/20/rotation = Quaternion(-0.0210502, -0.06853, 0.171875, 0.982507)
bones/21/rotation = Quaternion(0.0817318, 0.00351606, -0.0077713, 0.996618)
bones/22/position = Vector3(5.50934e-08, 2.19425, 0.0258006)
bones/22/rotation = Quaternion(-0.078675, 0.00442646, 0.75516, 0.650787)
bones/23/rotation = Quaternion(-0.650175, 5.97314e-08, -0.211694, 0.729698)
bones/24/rotation = Quaternion(-0.0259943, 3.96039e-09, 0.177653, 0.98375)
bones/25/rotation = Quaternion(0.0238929, -1.93192e-08, -0.163292, 0.986288)
bones/26/rotation = Quaternion(-0.000996608, -1.4321e-08, 0.00681113, 0.999976)
bones/27/position = Vector3(1.58143e-08, -1.98348, 0.0902679)
bones/27/rotation = Quaternion(-0.0218864, -0.0928458, 0.796913, 0.596515)
bones/28/rotation = Quaternion(-0.650467, -4.97765e-08, -0.238711, 0.721048)
bones/29/rotation = Quaternion(-0.00861646, -2.91732e-09, 0.330948, 0.94361)
bones/30/rotation = Quaternion(9.22245e-05, -1.22499e-07, -0.00354227, 0.999994)
bones/31/rotation = Quaternion(0.00340618, -1.21425e-07, -0.130829, 0.991399)
bones/33/position = Vector3(-3.35977e-08, -1.98348, 0.090268)
bones/33/rotation = Quaternion(0.0963226, 0.170551, -0.78549, 0.58706)
bones/34/rotation = Quaternion(-0.694421, 1.00122e-07, 0.0442839, 0.718205)
bones/35/rotation = Quaternion(0.076793, -1.66938e-08, -0.320117, 0.944261)
bones/36/rotation = Quaternion(-0.00123334, 8.61902e-09, 0.00514125, 0.999986)
bones/37/rotation = Quaternion(-0.0264904, -9.26746e-09, 0.110427, 0.993531)
bones/38/rotation = Quaternion(-0.157178, -1.00207e-07, 0.655205, 0.738919)

[node name="AnimationPlayer" parent="MeshParent/Kaiju" index="1"]
blend_times = [&"Bite_Attack", &"Bite_Attack", 1.0, &"Bite_Attack", &"Player_Idle", 1.0, &"Bite_Attack", &"Player_Walk", 1.0, &"Bite_Attack_Kill", &"Bite_Attack", 1.0, &"Bite_Attack_Kill", &"Bite_Attack_Kill", 1.0, &"Bite_Attack_Kill", &"Player_Idle", 1.0, &"Bite_Attack_Kill", &"Player_Walk", 1.0, &"Bite_Attack_Pickup", &"Bite_Attack_Pickup", 1.0, &"Bite_Attack_Pickup", &"Player_Idle_Holding_Enemy", 1.0, &"Bite_Attack_Pickup", &"Player_Walk_Holding_Enemy", 1.0, &"Player_Idle", &"Bite_Attack", 1.0, &"Player_Idle", &"Bite_Attack_Kill", 1.0, &"Player_Idle", &"Player_Idle", 1.0, &"Player_Idle", &"Player_Walk", 1.0, &"Player_Idle_Holding_Enemy", &"Player_Idle_Holding_Enemy", 1.0, &"Player_Idle_Holding_Enemy", &"Player_Walk_Holding_Enemy", 1.0, &"Player_Idle_Holding_Enemy", &"Throw_Enemy", 1.0, &"Player_Walk", &"Bite_Attack", 1.0, &"Player_Walk", &"Bite_Attack_Kill", 1.0, &"Player_Walk", &"Player_Idle", 1.0, &"Player_Walk", &"Player_Walk", 1.0, &"Player_Walk", &"Stomp_Attack", 1.0, &"Player_Walk", &"Tail_Attack", 1.0, &"Player_Walk_Holding_Enemy", &"Player_Idle_Holding_Enemy", 1.0, &"Player_Walk_Holding_Enemy", &"Throw_Enemy", 1.0, &"Stomp_Attack", &"Player_Idle", 1.0, &"Stomp_Attack", &"Player_Walk", 1.0, &"Stomp_Attack", &"Stomp_Attack", 1.0, &"Tail_Attack", &"Player_Idle", 1.0, &"Tail_Attack", &"Player_Walk", 1.0, &"Tail_Attack", &"Tail_Attack", 1.0, &"Throw_Enemy", &"Player_Idle", 1.0, &"Throw_Enemy", &"Player_Walk", 1.0, &"Throw_Enemy", &"Throw_Enemy", 1.0]

[node name="TailAttack" type="Area3D" parent="MeshParent/Kaiju" node_paths=PackedStringArray("main_body")]
collision_layer = 4
collision_mask = 2
script = ExtResource("2_dyxlg")
damage_amount = 5
main_body = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshParent/Kaiju/TailAttack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.09139e-11, 0.75132, 1.79646)
shape = SubResource("BoxShape3D_cnsyf")

[node name="StompAttack" type="Area3D" parent="MeshParent/Kaiju" node_paths=PackedStringArray("main_body")]
collision_layer = 0
collision_mask = 2
script = ExtResource("2_dyxlg")
damage_amount = 30
launch_force = 60.0
main_body = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshParent/Kaiju/StompAttack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0646, 0)
shape = SubResource("CylinderShape3D_ioxgp")

[node name="follow_target" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.869, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="follow_target"]
mesh = SubResource("SphereMesh_jp832")

[node name="CameraPivot" type="Node3D" parent="." node_paths=PackedStringArray("camera_nest", "camera", "follow_target", "original_target", "spring_position", "spring_arm", "player", "mesh_parent", "lock_on_area", "lock_on_timer", "lock_on_sprite", "animator_2d")]
script = ExtResource("5_dmlwb")
noise = SubResource("FastNoiseLite_dmlwb")
rotate_action = ExtResource("6_jp832")
lock_action = ExtResource("8_dmlwb")
change_lcck = ExtResource("9_jp832")
camera_nest = NodePath("CameraNest")
camera = NodePath("CameraNest/Camera3D")
follow_target = NodePath("../follow_target")
original_target = NodePath("../Original_camera_target")
spring_position = NodePath("SpringArm/SpringPosition")
spring_arm = NodePath("SpringArm")
player = NodePath("..")
mesh_parent = NodePath("../MeshParent")
lock_on_area = NodePath("../MeshParent/LockOnArea")
lock_on_timer = NodePath("LockOnTimer")
lock_on_sprite = NodePath("UI/Game/LockOn")
animator_2d = NodePath("UI/Game/AnimationPlayer")
idle_cooldown = 3.0

[node name="SpringArm" type="SpringArm3D" parent="CameraPivot"]
spring_length = 10.0

[node name="SpringPosition" type="Node3D" parent="CameraPivot/SpringArm"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="CameraPivot/SpringArm/SpringPosition"]
mesh = SubResource("SphereMesh_iwx2n")

[node name="CameraNest" type="Node3D" parent="CameraPivot"]

[node name="Camera3D" type="Camera3D" parent="CameraPivot/CameraNest"]
current = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="CameraPivot/CameraNest/Camera3D"]
mesh = SubResource("BoxMesh_uljta")

[node name="UI" type="CanvasLayer" parent="CameraPivot"]
process_mode = 3
layer = 2
script = ExtResource("8_ixiwu")

[node name="ProjectUISoundController" parent="CameraPivot/UI" instance=ExtResource("9_1ps34")]
button_hovered = ExtResource("10_mtrw4")
button_focused = ExtResource("10_mtrw4")
button_pressed = ExtResource("10_mtrw4")

[node name="InGameMenuOverlay" type="ColorRect" parent="CameraPivot/UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)
script = ExtResource("11_du256")

[node name="Settings" parent="CameraPivot/UI" instance=ExtResource("12_hmqcg")]

[node name="Controls" parent="CameraPivot/UI" instance=ExtResource("13_fvg78")]

[node name="Game" parent="CameraPivot/UI" instance=ExtResource("14_64oqw")]
mouse_filter = 2

[node name="PauseMenu" parent="CameraPivot/UI" instance=ExtResource("15_8vj76")]

[node name="MessageBoard" parent="CameraPivot/UI" instance=ExtResource("17_qcw8q")]

[node name="Lose Screen" parent="CameraPivot" instance=ExtResource("19_dmlwb")]
layer = 10

[node name="LockOnTimer" type="Timer" parent="CameraPivot"]
one_shot = true

[node name="Original_camera_target" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.188, 0)

[editable path="MeshParent/Kaiju"]
[editable path="CameraPivot/UI/PauseMenu"]
